# toolforge_toolkit

./: .env.example  .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  app.py  ascii-art.txt  auth_config.py  db.py  deployr-cli-1.1.0.tgz  extensions.py  flask_cd.yml  github_pr_creator.py  models.py  node_cd.yml  oauth_handler.py  package.json  pyproject.toml  requirements.txt  run_deployr.py  test_oauth.py  toolforge-deployr-1.1.0.tgz  toolforge_manager.py
configs/: auth_config.py
deployr/: __init__.py  cli.py
deployr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
frontend/: README.md  app.js  data.js  index.html  styles.css
migrations/versions/: 26b943deaaa8_test_migration.py  67ecef2dd332_initial_tools_table.py  7d5e42af539b_test_migration_run.py  c2d31da158bb_test_migration.py
routes/: auth.py  config.py  deploy.py  tools.py  webservice.py
scripts/: check-python.js
services/: auth_service.py  config_service.py  deploy_service.py  download_service.py  ssh_service.py
templates/: index.html  login.html
